changes/4.12/dd1c0f278b0e59c80f07b1c491a6cb5d2cf13844
staging: media: atomisp: fix build error in ov5693 driver

The ov5693 driver unconditionally uses the entity member of struct v4l2_subdev.
However this member is conditionally compiled in if CONFIG_MEDIA_CONTROLLER is
set. This results in the following build error if CONFIG_MEDIA_CONTROLLER is
not set:

drivers/staging/media/atomisp/i2c/ov5693/ov5693.c: In function 'ov5693_remove':
drivers/staging/media/atomisp/i2c/ov5693/ov5693.c:1961:31: error: 'struct v4l2_subdev' has no member named 'entity'
  media_entity_cleanup(&dev->sd.entity);

drivers/staging/media/atomisp/i2c/ov5693/ov5693.c:2023:9: error: 'struct v4l2_subdev' has no member named 'entity'
  dev->sd.entity.function = MEDIA_ENT_F_CAM_SENSOR;
         ^
drivers/staging/media/atomisp/i2c/ov5693/ov5693.c:2045:39: error: 'struct v4l2_subdev' has no member named 'entity'
  ret = media_entity_pads_init(&dev->sd.entity, 1, &dev->pad);

Add the corresponding Kconfig dependency to solve this error.

Signed-off-by: Tobias Regnery <tobias.regnery@gmail.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

